
Content Manager
- Editeren einer Seite in mehreren Sprachen auf einmal

News Manager
- Die ID der Newsmeldungen wird bei der Übersicht im Backend aufgelistet.
- Die Platzhalter [[NEWS_TEASER_TEXT]] und [[NEWS_CATEGORY_NAME]] werden beim
  Platzhalterverzeichnis im Backend aufgelistet.
- Der neue Platzhalter [[NEWS_IMAGE_LINK]] erzeugt einen Bild-Link auf die
  Detailseite der Newsmeldung.

Modul: Digital Asset Management
- Bei einem Download muss zwingend eine Datei oder URL als Quelle angegeben
  werden.
- Die Gültigkeit (Zeitdauer) eines Downloads kann definiert werden.
- Kategorien können in einer Gruppe zusammengefasst werden.
- Über die Benutzerverwaltung kann beim Erstellen eines neuen Benutzerkontos
  direkt eine neue persönliche Kategorie im Digital Asset Management Modul
  für diesen Benutzer erstellt werden.

Modul: Shop
- Bilder können von einem Produkt wieder entfernt werden.

FCKEditor
- Neue Version 2.6.4.1

****************************************
* Behobene Fehler **********************
****************************************
Allgemein:
- Die im Benutzerprofil definierte bevorzugte Frontend-Sprache wird nach der
  Authentifizierung im Frontend nur dann geladen, sofern der Benutzer im
  Vorfeld nicht bereits die Frontend Sprache manuell ausgewählt hat.
- Geschwindigkeitsoptimierung der Benutzerverwaltung.
- Die Verwendung des Apache Moduls mod_rewrite wird nur aktiviert, sofern die
  Option 'Virtuelle Sprachverzeichnisse verwenden' aktiviert wurde.
- Erweiterte Berechtigungen beim News Manager und den Modulen Kalender,
  Inserate Mark und Verzeichnis.
- Das Versenden von E-Mails bei der Verwendung eines separaten SMTP-Servers
  funktioniert.
- Bei der Inhaltsnavigation wird beim Typ 'dropdown' ab der zweiten Ebene
  auch ein CSS-Style (active/inactive) ausgegeben.

Block System
- Das Interface zur Auswahl der Frontend Seiten funktioniert korrekt.

Benutzerverwaltung
- Geburtstage zwischen dem 10. Februar 1653 und dem 16. November 5138 können